test/attr/ApplicationMain/attr_main_protocol.code
// RUN: %target-language-frontend -typecheck -parse-as-library -verify %s

@main // expected-error{{'@main' attribute cannot be applied to this declaration}}
protocol EntryPoint {
  static fn main()
}
